--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ body {
   border: 1px solid #4d7298;
   border-radius: 10px;
   height: 150px;
-  width: 200px;
+  width: 150px;
+  padding: 20px;
 }
 
 /*  ---- end exercise 3 ----  */
@@ -63,6 +64,10 @@ body {
   border: 1px solid #4d7298;
   border-radius: 10px;
   width: 500px;
+}
+
+.card-text-wrapper {
+  padding: 20px;
 }
 
 .card-img {
