--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-items a:link,
@@ -33,6 +35,9 @@ body {
   border-radius: 10px;
   width: 400px;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .child {
@@ -51,6 +56,12 @@ body {
   height: 150px;
   width: 150px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.child-2 {
+  flex: auto;
 }
 
 /*  ---- end exercise 3 ----  */
@@ -64,10 +75,17 @@ body {
   border: 1px solid #4d7298;
   border-radius: 10px;
   width: 500px;
+  display: flex;
 }
 
 .card-text-wrapper {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-text-wrapper div:nth-child(3) {
+  flex: auto;
 }
 
 .card-img {
@@ -86,6 +104,9 @@ body {
 /*  ---- start exercise 5 ----  */
 .tags {
   width: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .tags li {
